--- a/WEB-SIS-2-master/WEB SIS 2/Pages/Shared/_Layout.cshtml
+++ b/WEB-SIS-2-master/WEB SIS 2/Pages/Shared/_Layout.cshtml
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
-<body>
+
+<body >
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3 menuBg">
             <div class="container">
@@ -29,6 +30,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Employees/Employees">Paid Games</a><!--указал путь к папке пользователи-->
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Comments/Comments">Shopping Basket</a><!--указал путь к папке пользователи-->
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
