--- a/WEB-SIS-2-master/WEB SIS 2/Pages/Comments/Comments.cshtml
+++ b/WEB-SIS-2-master/WEB SIS 2/Pages/Comments/Comments.cshtml
@@ -25,7 +25,7 @@
                        <p class="card-text"> Date of sales : @item.Date </p>
                    </div>
                    <div class="card-footer text center">
-                       <a href="#" class="btn btn-success m-1"> view </a>
+                       <a asp-page="/Comments/Views" asp-route-Id="@item.Id" class="btn btn-success m-1"> view </a>
                        <a href="#" class="btn btn-primary m-1 "> Edit</a>
                        <a href="#" class="btn btn-danger m-1 "> Delete </a>
 
