--- a/WEB-SIS-2-master/WEB SIS 2/Pages/Employees2/Employees2.cshtml
+++ b/WEB-SIS-2-master/WEB SIS 2/Pages/Employees2/Employees2.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Free Games";
 }
 <h1>FREE GAMES </h1>
-<div class="row">
+<div class="row home">
     @foreach(var item in Model.Employees2)
     {
         //put k photo
