--- a/WEB-SIS-2-master/WEB SIS 2/Pages/Privacy.cshtml
+++ b/WEB-SIS-2-master/WEB SIS 2/Pages/Privacy.cshtml
@@ -1,8 +1,18 @@
 ﻿@page
 @model PrivacyModel
-@{
-    ViewData["Title"] = "Privacy Policy";
-}
+@{ ViewData["Title"] = "Privacy Policy"; }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<h4>You agree to the terms of the Privacy Policy because you have no choice</h4>
+<h1> Образец политики конфиденциальности</h1>
+@{ string[] g1 = { "Настоящая политика обработки персональных данных составлена в соответствии с требованиями Федерального закона от 27.07.2006. №152-ФЗ «О персональных данных» и определяет порядок обработки персональных данных и меры по обеспечению безопасности персональных данных, предпринимаемые Михайловым Иваном Сергеевичем (далее – Оператор).", "1.1. Оператор ставит своей важнейшей целью и условием осуществления своей деятельности соблюдение прав и свобод человека и гражданина при обработке его персональных данных, в том числе защиты прав на неприкосновенность частной жизни, личную и семейную тайну.", "1.2. Настоящая политика Оператора в отношении обработки персональных данных (далее – Политика) применяется ко всей информации, которую Оператор может получить о посетителях веб-сайта httpsː//thismywebsite·com." }; }
+@{ string[] g2 = { "2.1.Автоматизированная обработка персональных данных – обработка персональных данных с помощью средств вычислительной техники;", "2.2.Блокирование персональных данных – временное прекращение обработки персональных данных(за исключением случаев, если обработка необходима для уточнения персональных данных);", "и т.п."};}
+<div class="text-center home">
+    <h2>
+        Политика в отношении обработки персональных данных
+    </h2>
+    <h3>1. Общие положения</h3>
+    @Html.CreateList(g1, "square")
+    <h3>2. Основные понятия, используемые в Политике</h3>
+    @Html.CreateList(g2, "square")
+</div>
