--- a/WEB-SIS-2-master/WEB SIS 2/Pages/Employees/Employees.cshtml
+++ b/WEB-SIS-2-master/WEB SIS 2/Pages/Employees/Employees.cshtml
@@ -5,7 +5,7 @@
 }
 <h1>Our Games</h1>
 
-<div class="row">
+<div class="row home">
    @foreach (var item in Model.Employees)
    {
        //Путь к фотографиям
