--- a/WEB-SIS-2-master/WEB SIS 2/Pages/Employees2/Details2.cshtml
+++ b/WEB-SIS-2-master/WEB SIS 2/Pages/Employees2/Details2.cshtml
@@ -7,13 +7,13 @@
 <div class="row justify-content-center m-3 destination-box">
     <div class="col col-lg-8">
         <div class="card">
-            <div class="card-header text-center">
+            <div class="card-header text-center card-color">
                 <h1>@Model.Employee.Name</h1>
             </div>
 
             <div class="card-body text-center">
                 <div class="row">
-                    <div class="col">
+                    <div class="col card-color">
                         <h3 class="cardTextLeftFloating">Price: @Model.Employee.Price ₽</h3>
                         <h3 class="cardTextLeftFloating">Discount: @Model.Employee.Discount</h3>
                         <h3 class="cardTextLeftFloating">Genre: @Model.Employee.Genre</h3>
