--- a/WEB-SIS-2-master/WEB SIS 2/Pages/Shared/_Layout.cshtml
+++ b/WEB-SIS-2-master/WEB SIS 2/Pages/Shared/_Layout.cshtml
@@ -35,7 +35,16 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Comments/Comments">Shopping Basket</a><!--указал путь к папке пользователи-->
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Index2">Reviews</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Login">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Registration">Registration</a>
                         </li>
                     </ul>
                 </div>
